@@ -24,15 +24,15 @@ Entering a dungeon and loading an autosave saves some time.
 //Skeletons can be poisoned.
 //Does using a two-handed weapon yield exp to only one arm?
 //I think one can get a score of hundreds of thousands by cloning vast amounts of wands of resurrection and repeatedly killing and resurrecting Elpuri and collecting the dropped heads, each worth 2000p.
-'G'oing on the the ostrich landing site and interrupting a banana grower may sometimes make New Attnam hostile.
+//'G'oing on the the ostrich landing site and interrupting a banana grower may sometimes make New Attnam hostile.
 The player often becomes burdened, stressed or overloaded when he eats big corpses.
-Highscores don't always fit to the screen.
+//Highscores don't always fit to the screen.
 //It is possible to chat with fainted creatures.
 (s) Wielded items can't be eaten.
 //AI monsters don't mind about smokes.
 //Panicking monsters can eat.
 //Pet ghosts don't gain any strength exp.
-Throwing a potion of water at a wall in a shop makes the guards hostile.
+(s) Throwing a potion of water at a wall in a shop makes the guards hostile.
 //Ghosts can be poisoned.
 (s) If the player can attack with arms but is a more powerful kicker, the danger system still only checks the arm attack.
 //"You hit something! Something manages to block the attack with its steel sword +1!"
@@ -40,17 +40,17 @@ Throwing a potion of water at a wall in a shop makes the guards hostile.
 (s) The bone file code doesn't handle shelves correctly. (but there are never shelves in bone levels)
 (s) The bone file code doesn't handle shops correctly. (but there are never shops in bone levels)
 (s) The head of Ivan is left in bone levels.
-"You faint. You hit the floating eye! It is not hurt."
+//"You faint. You hit the floating eye! It is not hurt."
 Kamikaze dwarves die smiling even if headless.
 //"You feel a slight tingling in your hands." when armless.
 //Mirage dogs.
 Odd pentagram missing bug.
 A puppy can polymorph into a puppy.
 //Magical air and bone are shown by infravision.
-Sophos doesn't accept parchment golem corpses.
-Using a wand of door creation in shops is allowed.
-Do psi waves damage armor?
-Do new bodyparts of player clones work properly?
+//Sophos doesn't accept parchment golem corpses.
+//Using a wand of door creation in shops is allowed.
+//Do psi waves damage armor?
+(s) Do new bodyparts of player clones work properly? (no)
 //Pickaxes can't dig squares on the edges but explosions can destroy them. 
 Chests in inventory cannot be unlocked.
 Healing liquid penetrates chests.
