@@ -34,6 +34,7 @@ character
 	CanWalk = true;
 	CanSwim = false;
 	CanFly = false;
+	EnergyResistance = 0;
 	FireResistance = 0;
 	PoisonResistance = 0;
 	ElectricityResistance = 0;
@@ -195,7 +196,7 @@ petrus
 	Alias == "Petrus";
 	Amulet = amulet(AMULET_OF_LIFE_SAVING);
 	BodyArmor = DIAMOND bodyarmor(PLATE_MAIL) { Enchantment = 4; }
-	Cloak = ANGEL_HAIR cloak { Enchantment = 4; }
+	Cloak = ANGEL_HAIR cloak(CLOAK_OF_ELECTRICITY_RESISTANCE) { Enchantment = 4; }
 	Belt = ILLITHIUM belt { Enchantment = 4; }
 	RightWielded = justifier;
 	RightGauntlet = DRAGON_HIDE gauntlet(GAUNTLET_OF_STRENGTH) { Enchantment = 4; }
@@ -213,6 +214,7 @@ petrus
 	AttachedGod = VALPURUS;
 	BodyPartsDisappearWhenSevered = true;
 	CanBeConfused = false;
+	EnergyResistance = 50;
 }
 
 farmer
@@ -405,8 +407,11 @@ guard
 		Helmet = helmet(HELM_OF_PERCEPTION) { Enchantment = 3; }
 		Amulet = amulet(AMULET_OF_ESP);
 		BodyArmor = ILLITHIUM bodyarmor(PLATE_MAIL) { Enchantment = 3; }
+		Cloak = PHOENIX_FEATHER cloak(CLOAK_OF_FIRE_RESISTANCE);
 		RightWielded = VALPURIUM VALPURIUM meleeweapon(LONG_SWORD) { Enchantment = 3; }
 		LeftWielded = VALPURIUM shield { Enchantment = 3; }
+		RightRing = ring(RING_OF_ELECTRICITY_RESISTANCE);
+		LeftRing = ring(RING_OF_POISON_RESISTANCE);
 		RightGauntlet = ANGEL_HAIR gauntlet(GAUNTLET_OF_STRENGTH) { Enchantment = 3; }
 		RightBoot = SAPPHIRE boot(BOOT_OF_STRENGTH) { Enchantment = 3; }
 		Adjective = "master";
@@ -910,8 +915,8 @@ billswill
 	DefaultCharisma = 5;
 	DefaultMana = 10;
 	StandVerb = "floating";
-	Frequency = 100;
-	DangerModifier = 250;
+	Frequency = 250;
+	DangerModifier = 500;
 	CanFly = true;
 	TotalVolume = 500000;
 	TorsoBitmapPos = 48, 0;
@@ -922,7 +927,6 @@ billswill
 	PostFix = "of Bill's will";
 	BaseBiteStrength = 3000;
 	CanBeGenerated = true;
-	ClassStates = HASTE|ESP;
 	KnownCWeaponSkills == BITE;
 	CWeaponSkillHits == 100;
 	BaseEmitation = rgb24(110, 110, 130);
@@ -941,6 +945,8 @@ billswill
 	CanTalk = true;
 	AttackStyle = USE_HEAD;
 	BiteCapturesBodyPart = false;
+	ClassStates = HASTE|ESP|GAS_IMMUNITY;
+	CanWalkThroughWalls = true;
 }
 
 skeleton
@@ -2056,7 +2062,7 @@ mistress
 		RightWielded = SPIDER_SILK whipofthievery { Enchantment = 5; }
 		LeftWielded = SPIDER_SILK chameleonwhip { Enchantment = 5; }
 		RightRing = ring(RING_OF_FIRE_RESISTANCE);
-		LeftRing = ring(RING_OF_POISON_RESISTANCE);
+		LeftRing = ring(RING_OF_ELECTRICITY_RESISTANCE);
 		CWeaponSkillHits == 2000;
 		RightSWeaponSkillHits = 2000;
 		LeftSWeaponSkillHits = 2000;
@@ -3372,7 +3378,6 @@ darkmage
 	IgnoreDanger = true;
 	AttachedGod = INFUSCOR;
 	IsAbstract = true;
-	Inventory == Random { Category = WAND|SCROLL; }
 	KnownCWeaponSkills == BLUNT_WEAPONS;
 
 	Config APPRENTICE;
@@ -3431,6 +3436,7 @@ darkmage
 		CWeaponSkillHits == 100;
 		RightSWeaponSkillHits = 50;
 		LeftSWeaponSkillHits = 50;
+		Inventory == Random { MaxPrice = 500; Category = WAND|SCROLL; }
 	}
 
 	Config ELDER;
@@ -3461,6 +3467,7 @@ darkmage
 		CWeaponSkillHits == 200;
 		RightSWeaponSkillHits = 100;
 		LeftSWeaponSkillHits = 100;
+		Inventory == Random { MinPrice = 500; Category = WAND|SCROLL; }
 	}
 
 	Config ARCH_MAGE;
