@@ -9,6 +9,15 @@ is also provided AS IS and is probably completely unreadable.
 
 May 8 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
+	* Bill's wills' psi waves and ghosts' touches no longer damage armor
+	* Bill's wills are now immune to gas and can walk through walls
+	* Petrus now wears a cloak of electricity resistance and is intrinsically
+	  energy resistant
+	* Adjusted mages' inventories a little
+	* Healing now consumes NP
+
+May 8 2003 Timo Kiviluoto <sonor@phpoint.fi>
+
 	* Banana growers no longer attack people 'g'oing on the landing platform
 	* Highscore now shows only 40 entries per page, to prevent felist crossing
 	  the screen borders
